# finance_advisor

./: .env.example  .gitignore  Makefile  RAG.md  README.md  agents.md  alembic.ini  architecture.md  chunking.md  database.md  docker-compose.yml  embeddings.md  hallucination.md  healthcare_graph.py  langGraph.md  langchain.md  langchain_rag.py  memory.md  multi_agent.md  multi_agent_health.py  prompt_engineering.md  pyproject.toml  retrieval.md  tool_calling.md  week1_review.md
alembic/: env.py
alembic/versions/: ee3edf1ac160_initial_schema.py
app/: config.py  exceptions.py  logging_config.py  main.py
app/agent/: executor.py  memory.py  prompts.py
app/agent/tools/: __init__.py  budget_planner.py  financial_health.py  knowledge_retrieval.py  portfolio_calc.py  risk_assessment.py
app/api/: deps.py  error_handlers.py  middleware.py
app/api/v1/: finances.py  health.py  portfolio.py  router.py  users.py
app/db/: base.py  session.py
app/db/models/: __init__.py  conversation.py  portfolio.py  user.py
app/rag/: vector_store.py
app/rag/knowledge_corpus/: budgeting_principles.txt  investment_basics.txt  retirement_planning.txt  risk_management.txt
app/schemas/: finance.py  portfolio.py  user.py
app/services/: agent_service.py  portfolio_service.py  user_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/store/: app.ts
scripts/: build_vector_store.py  init_db.py
tests/: conftest.py
tests/integration/: test_finance_api.py
tests/unit/: test_tools.py
(+18 files in other folders)
